BB-3918: Product image thumbnail is too small on product view  - fix image size styles

--- a/src/Oro/Bundle/FrontendBundle/Resources/public/default/scss/_legacy/products-widget.scss
+++ b/src/Oro/Bundle/FrontendBundle/Resources/public/default/scss/_legacy/products-widget.scss
@@ -792,7 +792,7 @@
     position: relative;
 
     &_in-cart {
-      padding: 0 0 0 107px;
+      padding: 0 0 0 104px;
     }
   }
 
